# api/routes/api.php
@@ -3,5 +3,5 @@
 use App\Http\Controllers\ChargingController;
 use Illuminate\Support\Facades\Route;
 
-//Route::post('start-charging', [ChargingController::class, 'startCharging']);
+Route::post('start-charging', [ChargingController::class, 'startCharging']);
 
