# api/routes/web.php
@@ -1,1 +1,6 @@
 <?php
+
+use App\Http\Controllers\ChargingController;
+use Illuminate\Support\Facades\Route;
+
+Route::get('start-charging', [ChargingController::class, 'startCharging']);
